--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Vite + React</title>
   </head>
-  <body class="bg-red-200">
+  <body style="background-color: #ecac9f;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
